--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@
 
 # HINT: insert your required application properties here
 
-spring.application.display-name = Hellow World
-spring.application.name = hello-world
+spring.application.display-name = Acme Toolkits
+spring.application.name = acme-toolkits
 spring.application.version = 22.0
 
 # HINT: don't forget to include the base properties provided by the framework.
